--- a/HTML/index2.html
+++ b/HTML/index2.html
@@ -5,13 +5,14 @@
     </head>
     <body>
         <h1>’Black Panther’ stays strong with $108M in second weekend</h1>
-        <h2>NEW YORK — “Black Panther” has scored one of the best second weekends ever with an estimated $108 million in ticket sales.</h2>
+        <h2>NEW <br> YORK — “Black Panther” has scored one of the best second weekends ever with an estimated $108 million in ticket sales.</h2>
             <p>i. Studio estimates Sunday say “Black Panther” is still performing as one of the top blockbusters of all time. This weekend’s result makes Ryan Coogler’s Marvel sensation only the fourth film to earn $100 million in its second weekend, along with “Star Wars: The Force Awakens,” “Jurassic World” and “The Avengers.”</p>
             <p>ii. Of those, only “The Force Awakens” had a better second weekend.</p>
             <p>iii. In two weeks of release, “Black Panther” has grossed $400 million domestically and $704 million worldwide.</p>
             <p>iv. Of new releases, faring the best is the Warner Bros. comedy “Game Night,” starring Jason Bateman and Rachel McAdams. It debuted with $16.6 million.</p>
             <p>v. The well-reviewed sci-fi thriller “Annihilation” opened with $11 million.</p>
         <h3>Featured Articles</h3>
+        <hr>
         <h3>COMMENTS</h3>
     </body>
 </html>
