--- a/HTML/index1.html
+++ b/HTML/index1.html
@@ -4,6 +4,6 @@
         <title>Hello World</title>   
     </head>
     <body>
-        <div>It all started    </br> &amp;with an HTMLfile!!</div>
+        <div>It all started with an HTMLfile!!</div>
     </body>
 </html>
