--- a/HTML/index3.html
+++ b/HTML/index3.html
@@ -14,8 +14,8 @@
         <span>Universal Studios Hollywood</span> springs into March with the return of the dazzling light projection spectacular, “The Nighttime Lights at Hogwarts Castle,” at “The Wizarding World of Harry Potter” for a limited engagement.
     </div>
     <div>
-        As night falls on Hogsmeade village, “The Nighttime Lights at Hogwarts Castle” shines brightly with an awe-inspiring spectacle that showcases the four houses of Hogwarts: Gryffindor, Ravenclaw, Hufflepuff and Slytherin and culminates with awesome beams of lights that fan into the night sky.
-        The colorful state-of-the-art light display and special effects projection is accompanied by a special musical arrangement created by Academy Award-winning composer John Williams based on his original scores composed for the film series. The musical arrangement that emanates in a surround sound environment was conducted by prolific arranger William Ross and recorded by the London Symphony Orchestra in London.
+        As night falls on Hogsmeade village, “The Nighttime Lights at Hogwarts Castle” shines brightly with an awe-inspiring spectacle that showcases the four houses of Hogwarts: <span>Gryffindor</span>, Ravenclaw, Hufflepuff and Slytherin and culminates with awesome beams of lights that fan into the night sky.
+        The colorful state-of-the-art light display and special effects projection is accompanied by a special musical arrangement created by Academy Award-winning composer <span>John Williams</span> based on his original scores composed for the film series. The musical arrangement that emanates in a surround sound environment was conducted by prolific arranger William Ross and recorded by the <span>London Symphony Orchestra</span> in London.
     </div>
     <br>
     <h2>WHEN:</h2>
