--- a/HTML/index4.html
+++ b/HTML/index4.html
@@ -28,6 +28,43 @@
         <li>Pomona Sprout</li>
         <li>Sybill Trelawney</li>
     </ol>
-    
+    <ul>
+        <li>
+            Hogwarts ghosts
+            <ol>
+                <li>The Bloody Baron</li>
+                <li>The Fat Friar</li>
+                <li>The Grey Lady</li>
+                <li>Nearly Headless Nick</li>
+            </ol>
+        </li>
+        <li>
+            Hogwarts founders
+            <ol>
+                <li>Godric <span>Gryffindor</span></li>
+                <li>Helga <span>Hufflepuff</span></li>
+                <li>Rowena <span>Ravenclaw</span></li>
+                <li>Salazar <span>Slytherin</span></li>
+            </ol>
+        </li>
+    </ul>
+    <hr/>
+    <h2>List of spells</h2>
+    <dl>
+        <dt>Tem: Aberto</dt>
+        <dd>Definition: A spell presumably used to open objects such as doors or windows.</dd>
+        <dt>Term: Accio</dt>
+        <dd>Definition: This charm summons an object to the caster, potentially over a significant distance.</dd>
+        <dt>Term: Expecto Patronum</dt>
+        <dd>Definition: Evokes a partially-tangible positive energy force known as a Patronus</dd>
+        <dt>Term: Sectumsempra</dt>
+        <dd>Definition: A dark spell that creates large, blood-oozing gashes on the subject as if said subject had been "slashed by a sword".</dd>
+        <dt>Term: Immobulus</dt>
+        <dd>Definition: Renders living targets immobile.</dd>
+        <dt>Term: Partis Temporus</dt>
+        <dd>Definition: Creates a temporary gap through protective magical barriers.</dd>
+        <dt>Term: Locomotor </dt>
+        <dd>Definition: The spell causes the named object to rise in the air and move around at the will of the caster.</dd>
+    </dl> 
 </body>
 </html>
