--- a/HTML/ex_5/contact.html
+++ b/HTML/ex_5/contact.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Contact Me</h1>
     <hr/>
-    <a href="mailto:zhaoyzhcyx@gmail.com">Contact Me</a>
+    <a href="mailto:zhaoyzhcyx@gmail.com">Email Me</a>
 </body>
 </html>
