--- a/HTML/ex_5/documents/resume.html
+++ b/HTML/ex_5/documents/resume.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Johnson Zhao</h1>
     <hr/>
+    <a href="../index.html">Home</a>
     <a href="../contact.html">Contact Me</a>
 </body>
 </html>
