--- a/HTML/ex_5/news.html
+++ b/HTML/ex_5/news.html
@@ -9,6 +9,6 @@
 <body>
     <h1>News</h1>
     <hr/>
-    <a href="https://leaderpost.com/" target="_blank">Leader_Post</a>
+    <a href="https://leaderpost.com/" target="_blank">Leader Post</a>
 </body>
 </html>
