--- a/HTML/ex_5/about.html
+++ b/HTML/ex_5/about.html
@@ -7,6 +7,7 @@
         <hr>
         <a href="index.html">Home</a>
         <a href="documents/resume.html">Resume</a>
+        <a href="contact.html">Contact Me</a>
         <p>Paragraph 1</p>
         <p>Paragraph 2</p>
         <p>Paragraph 3</p>
