--- a/HTML/ex_5/index.html
+++ b/HTML/ex_5/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Home</title>   
-    </head>
-    <body>
-        <h1>Home</h1>
-        <hr>
-        <a href="news.html">News</a>
-        <a href="about.html">About Me</a>
-        <a href="contact.html">Contact</a>
-        <p>Paragraph 1</p>
-        <p>Paragraph 2</p>
-        <p>Paragraph 3</p>
-        <p>Paragraph 4</p>
-        <p>Paragraph 5</p>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Home</title>
+</head>
+<body>
+    <h1>Home</h1>
+    <hr>
+    <a href="news.html">News</a>
+    <a href="about.html">About Me</a>
+    <a href="contact.html">Contact</a>
+    <a href="documents/resume.html">Resume</a>
+    <p>Paragraph 1</p>
+    <p>Paragraph 2</p>
+    <p>Paragraph 3</p>
+    <p>Paragraph 4</p>
+    <p>Paragraph 5</p>
+</body>
 </html>
