--- a/HTML/ex_7/dog_1.html
+++ b/HTML/ex_7/dog_1.html
@@ -9,7 +9,7 @@
 <body>
     <a href="index.html">Home</a>
     <h1>So cute..</h1>
-    <hr />
-    <img src="imgs/dogs/djjog_1.jpg" alt="dog that is so cute">
+    <hr/>
+    <img src="imgs/dogs/dog_1.jpg" alt="dog that is so cute"/>
 </body>
 </html>
