--- a/HTML/ex_7/index.html
+++ b/HTML/ex_7/index.html
@@ -20,11 +20,11 @@
     <div id="nav">
         <h2>Links</h2>
         <ul>
-            <li><a href="dog_1.html">Dog 1</a></li>
-            <li><a href="dog_2.html">Dog 2</a></li>
-            <li><a href="dog_3.html">Dog 3</a></li>
-            <li><a href="dog_4.html">Dog 4</a></li>
-            <li><a href="dog_5.html">Dog 5</a></li>
+            <li><a href="dog_1.html">Go to Dog 1</a></li>
+            <li><a href="dog_2.html">Go to Dog 2</a></li>
+            <li><a href="dog_3.html">Go to Dog 3</a></li>
+            <li><a href="dog_4.html">Go to Dog 4</a></li>
+            <li><a href="dog_5.html">Go to Dog 5</a></li>
         </ul>
     </div>
     <div id="Gallery">
