--- a/HTML/index8.html
+++ b/HTML/index8.html
@@ -9,7 +9,7 @@
     <h1>Stanley Cup Champions</h1>
     <h2>Every team that's won the Cup</h2>
     <hr/>
-    <img src="cut.jpg">
+    <img src="cut.jpg"/>
     <h3>Champions</h3>
     <table>
         <tr><td>2017</td> <td>Pittsburgh Penguins</td><td> Mike Sullivan</td></tr>
@@ -21,7 +21,7 @@
         <tr><td>2011</td> <td>Boston Bruins</td><td> Claude Julien</td></tr>
         <tr><td>2010</td> <td>Chicago Blackhawks</td><td> Joel Quenneville</td></tr>
         <tr><td>2009</td> <td>Pittsburgh Penguins</td><td> Dan Bylsma</td></tr>
-        <tr><td>2008</td> <td>leave empty columns here for team and</td><td></td></tr>
+        <tr><td>2008</td> <td></td> <td></td></tr>
         <tr><td>2007</td> <td>Anaheim Ducks</td><td> Randy Carlyle </td></tr>
         <tr><td>2006</td> <td>Carolina Hurricanes</td><td> Peter Laviolette</td></tr>
         <tr><td>2004</td> <td>Tampa Bay Lightning</td><td> John Tortorella</td></tr>
@@ -32,54 +32,44 @@
     </table>
 
     <table>
-            <thead>
-              <tr>
-                <th>Header 1 - 1</th>
-                <th>Header 1 - 2</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Body 1 - 1</td>
-                <td>Body 1 - 2</td>
-              </tr>
-              <tr>
-                <td>Body 2 - 1</td>
-                <td>Body 2 - 2</td>
-              </tr>
-            </tbody>
-            <tfoot>
-              <tr>
-                <td>Foot 1 - 1</td>
-                <td>Foot 1 - 2</td>
-              </tr>
-            </tfoot>
-            <tbody>
-                    <tr>
-                      <td>Body 1 - 1</td>
-                      <td>Body 1 - 2</td>
-                    </tr>
-                    <tr>
-                      <td>Body 2 - 1</td>
-                      <td>Body 2 - 2</td>
-                    </tr>
-                  </tbody>
-          </table>
+      <thead>
+        <tr>
+          <th>Header 1 - 1</th>
+          <th>Header 1 - 2</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Body 1 - 1</td>
+          <td>Body 1 - 2</td>
+        </tr>
+        <tr>
+          <td>Body 2 - 1</td>
+          <td>Body 2 - 2</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <td>Foot 1 - 1</td>
+          <td>Foot 1 - 2</td>
+        </tr>
+      </tfoot>
+    </table>
 
-          <table border="1">
-            <tr>
-              <td rowspan="2">1 Column</td>
-              <td>middle value</td>
-              <td>middle value</td>
-              <td rowspan="2">1 Column</td>
-            </tr>
-            <tr>
-              <td>middle value</td>
-              <td>middle value</td>
-            </tr>
-            <tr>
-              <td colspan="4">Just 1 column for 4 spaces</td>
-            </tr>
-          </table>
+    <table border="1">
+      <tr>
+        <td rowspan="2">1 Column</td>
+        <td>middle value</td>
+        <td>middle value</td>
+        <td rowspan="2">1 Column</td>
+      </tr>
+      <tr>
+        <td>middle value</td>
+        <td>middle value</td>
+      </tr>
+      <tr>
+        <td colspan="4">Just 1 column for 4 spaces</td>
+      </tr>
+    </table>
 </body>
 </html>
