--- a/HTML/index10.html
+++ b/HTML/index10.html
@@ -8,25 +8,50 @@
 </head>
 <body>
     <H1>Exercise 10</H1>
-    <table border="0.1">
+    <table>
+      <thead bgcolor="green">
+        <th>No. overall</th>
+        <th>NO. in serason</th>
+        <th>Title</th>
+        <th>Directed by</th>
+        <th>Written by</th>
+        <th>Original air Date</th>
+        <th>U.S. viewers (millions)</th>
+      </thead>
+      <tbody>
         <tr>
-          <td rowspan="2" colspan="2">Season</td>
-          <td rowspan="2">Episodes</td>
-          <td colspan="2">Originally aired</td>
-          <td rowspan="2">Avg. U.S. viewers (millions)</td>
+          <td>1</td>
+          <td>1</td>
+          <td><a href="https://en.wikipedia.org/wiki/Winter_Is_Coming" target="_blank">Winger is Comming"</a></td>
+          <td><a href="https://en.wikipedia.org/wiki/Tim_Van_Patten" target="_blank">Tim Van Patten</a></td>
+          <td><a href="https://en.wikipedia.org/wiki/David_Benioff" target="_blank">David Benioff</a> & <a href="https://en.wikipedia.org/wiki/D._B._Weiss">D.B. Weiss</a></td>
+          <td>April 17,2011</td>
+          <td>2.22</td>
         </tr>
         <tr>
-          <td>First aired</td>
-          <td>Last aired</td>
-        </tr>
+            <td>2</td>
+            <td>2</td>
+            <td>"The Kingsroad"</td>
+            <td>Tim Van Patten</td>
+            <td>David Benioff & D.B. Weiss</td>
+            <td>April 24,2011</td>
+            <td>2.20</td>
+          </tr>
+          <tr>
+              <td>3</td>
+              <td>4</td>
+              <td>"Lord Snow"</td>
+              <td>Brian Kirk</td>
+              <td>David Benioff & D.B. Weiss</td>
+              <td>May 1,2011</td>
+              <td>2.44</td>
+          </tr>
+        </tbody>
+        <tfoot>
         <tr>
-            <td bgcolor="gray"></td>
-            <td>1</td>
-            <td><a href="https://en.wikipedia.org/wiki/Winter_Is_Coming" target="_blank">10</a></td>
-            <td>April 17, 2011</td>
-            <td>June 19,  2011</td>
-            <td>2.52</td>
-        </tr>
-      </table>
+          <td colspan="7" bgcolor="black" style="color:white; text-align: center">Regina</td>
+        </tr>  
+        </tfoot>
+    </table>
 </body>
 </html>
