--- a/HTML/ex_12/create_user.html
+++ b/HTML/ex_12/create_user.html
@@ -9,7 +9,6 @@
 <body>
     <h1>Created User</h1>
     <hr/>
-    <p>Now you can login to our site</p>
-    <a href="#"></a>
+    <p>Now you can <a href="#">login</a> to our site</p>
 </body>
 </html>
