--- a/HTML/ex_12/index.html
+++ b/HTML/ex_12/index.html
@@ -12,23 +12,30 @@
     <fieldset>
     <legend>User From</legend>
     <form action="create_user.html" method="get" enctype="application/x-www-form-urlencoded">
-        <label>Username:</label>
-        <input type="text" name="username" placeholder="username" size="30" maxlength="12"/>
-        <label>Password:</label>
-        <input type="password" size="30" maxlength="8" placeholder="password"/>
-        <label>Select your favourite superheroe</label>
-        <input type="radio" name="superman" value="Superman"/>
-        <input type="radio" name="superman" value="Batman" checked="checked"/>
-        <input type="radio" name="superman" value="Wonder Woman"/>
-        <input type="radio" name="superman" value="Flash"/>
-        <input type="radio" name="superman" value="Thor"/>
-        <input type="radio" name="superman" value="Hulk"/>
-        <label>Select your favourite video game</label>
-        <input type="checkbox" name="videogame" value="Fifa"/>
-        <input type="checkbox" name="videogame" value="NHL"/>
-        <input type="checkbox" name="videogame" value="Residen"/>
-        <input type="checkbox" name="videogame" value="Uncharted"/>
+        <div>
+            <label>Username:</label>
+            <input type="text" name="username" placeholder="username" size="30" maxlength="12"/>
+            <label>Password:</label>
+            <input type="password" size="30" maxlength="8" placeholder="password"/>
+        </div>
+        <div>
+            <label>Select your favourite superheroe</label>
+            <input type="radio" name="superhereo" value="Superman"/> Superman
+            <input type="radio" name="superhereo" value="Batman" checked="checked"/> Batman
+            <input type="radio" name="superhereo" value="Wonder Woman"/> Wonder Woman
+            <input type="radio" name="superhereo" value="Flash"/> Flash
+            <input type="radio" name="superhereo" value="Thor"/> Thor
+            <input type="radio" name="superhereo" value="Hulk"/> Hulk
+        </div>
+        <div>    
+            <label>Select your favourite video game</label>
+            <input type="checkbox" name="videogame" value="Fifa"/> Fifa
+            <input type="checkbox" name="videogame" value="NHL"/> NHL
+            <input type="checkbox" name="videogame" value="Residen"/> Residen
+            <input type="checkbox" name="videogame" value="Uncharted"/> Uncharted
+        </div>
         <input type="hidden" name="userid" value="2300" />
+        <input type="submit" name="submit" value="submit">
     </form>
 </fieldset>
 </body>
