--- a/HTML/ex_13/index.html
+++ b/HTML/ex_13/index.html
@@ -31,8 +31,8 @@
         <textarea id="bio" name="bio" placeholder="bio"></textarea>
         <label for="filename">File:</label>
         <input type="file" id="filename" name="filename"/>
-        <button>Clear Form</button>
-        <button>Add new user</button>
+        <button type="reset">Clear Form</button>
+        <button type="submit">Add new user</button>
     </form>
 </body>
 </html>
