--- a/HTML/ex_15/form.html
+++ b/HTML/ex_15/form.html
@@ -12,7 +12,7 @@
                 <legend>User From</legend>
                 <div>
                     <label>Username:</label>
-                    <input type="text" name="username"  pattern="/^[A-Z]+$/i" placeholder="username" size="30" maxlength="12" required/>
+                    <input type="text" name="username"  pattern="[A-Za-z]+" placeholder="username (letters only)" size="30" maxlength="12" required/>
                     <label>Password:</label>
                     <input type="password" size="30" pattern="[0-9]+" maxlength="8" placeholder="password"  required />
                 </div>
